# simple_color_r

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: color_map.rs  colors.rs  lib.rs  utils.rs
tests/: simple.rs
